style/details-summary.css
details {

    width: 100%;

    &[open] {
        margin-block-end: var(--mbe);

        & > summary {
            margin-block-end: var(--mbe);

            & .open-marker {
                display: initial;
            }

            & .closed-marker {
                display: none;
            }
        }
    }

    & > summary {

        cursor: pointer;
        display: flex;
        align-items: center;
        user-select: none;

        &::marker {
            display: none;
        }

        & .open-marker {
            display: none;
        }

        &::-webkit-details-marker {
            display: none;
        }

        & svg.open-marker, svg.closed-marker {
            width: calc(1.25 * var(--s-s));
            height: calc(1.25 * var(--s-s));
        }

        & svg {
            width: var(--s-n);
            height: var(--s-n);
        }
    }

    &:focus {
        outline: 0;
    }

    &.larger {
        & > summary {
            --bg: var(--c-highlight);
            justify-content: space-between;
            min-width: max-content;
            max-width: var(--s-maxw);
            margin: auto;
            padding: var(--s-xs);
            padding-inline-end: var(--s-s);
            background-color: var(--bg);
            color: var(--fg);
            border-radius: var(--s-s);
            column-gap: var(--s-s);
            row-gap: var(--rg);
            flex-wrap: wrap;

            & > .summary-heading {
                background-color: var(--c-highlight);
                color: var(--c-foreground);
                padding: calc(1.5 * var(--s-xs)) var(--s-s);
                border-radius: calc(1.25 * var(--s-xs));
            }
        }

        &[open] {
            & > summary {
                margin-block-end: var(--mbe);
                & > .summary-heading {
                    background-color: var(--c-background)
                }
            }
        }
    }

    &.smaller {
        width: 100%;

        &[open] {
            margin-block-end: 0;

            & > summary {
                background-color: var(--c-foreground);
                color: var(--c-highlight)

            }
        }

        & > summary {
            column-gap: var(--s-xs);
            padding: var(--s-xs) var(--s-s);
            background-color: var(--c-highlight);
            border-radius: var(--s-xs);
            color: var(--fg);
            width: max-content;
            justify-self: var(--js);
            align-self: var(--as);

            & svg {
                width: var(--s-s);
                height: var(--s-s);
            }

        }
    }

}

